<resources>
    <string name="app_name">Cafe Order</string>
    <string name="logo_description">Логотип кафе</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="hint_name">Введите ваше Имя</string>
    <string name="hint_password">Введите пароль</string>
    <string name="button_create">Создать заказ</string>
    <string name="toast">Все поля должны быть заполнены</string>
    <string name="welcome_name_order">Привет, %s! Что будете заказывать?</string>


    <string-array name="options_of_coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>
    <string-array name="options_of_tea">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>

    <string name="defaul_name">клиент</string>
    <string name="defaul_password">пароль</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="choose_add_tea">Что добавить в ваш %s?</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лимон</string>
    <string name="choose_tea_or_coffee">Выберете вид напитка</string>
    <string name="button_create_order">Кнопка сделать заказ</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="need_additions">\"Необходимые добавки: \"</string>


</resources>